--- a/data/blog/from-transformer-to-llm-part-2.mdx
+++ b/data/blog/from-transformer-to-llm-part-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: From Transformer to LLM - Part 2. LLMs and popular methods
 date: '2024-12-19'
-tags: ['LLMs','Language Models','Transformer', 'Fine-tuning', 'RAG', ]
+tags: ['LLMs','Language Models','Transformer', 'Fine-tuning', 'RAG']
 draft: true
 summary: 'TBD'
 image: '/static/images/resource/from-transformer-to-llm/prompting_viz_10.png'
