chore: update layout of article transformer

--- a/data/blog/from-transformer-to-llm-part-1.mdx
+++ b/data/blog/from-transformer-to-llm-part-1.mdx
@@ -15,7 +15,7 @@ image: '/static/images/resource/from-transformer-to-llm/thumbnail-board-room-att
 
 The transformer is a neural network with a specific structure that includes a mechanism called **self-attention** or more specifically, **multi-head attention**.  This allows the model to build rich contextual representations of a token’s meaning by attending to and integrating information from surrounding tokens, effectively capturing how tokens relate to each other over long spans.
 
-## 1. Mechanism
+## 1. Attention
 
 ### 1.1. Self-attention
 
@@ -66,13 +66,16 @@ This output, $h_t$, represents the context-aware embedding of token $t$, combini
 
 ### 1.2. Multi-head attention
 
-Multi-head attention is a mechanism within transformers that extends self-attention by allowing the model to attend to different aspects of the input simultaneously. This is achieved by using multiple attention heads, each operating independently but in parallel. Each head can focus on different linguistic relationships or patterns within the context, such as syntactic dependencies, semantic relatedness, or coreference resolution.
+Multi-head attention is a mechanism within transformers that extends self-attention by allowing the model to attend to different aspects of the input simultaneously. This is achieved by using multiple attention heads, each operating independently but in parallel.
+- One for syntactic relatedness
+- One for semantic relatedness
+- One for coreference, etc
 
 <p align="center">
   <img src="/static/images/resource/from-transformer-to-llm/transformer_self-attention_viz_1.png" alt="multi-head-attention" />
 </p>
 
-<p style={{ textAlign: "center" }}>*Source: http://jalammar.github.io/illustrated-transformer/*</p>
+<p style={{ textAlign: "center" }}>*Source: http://jalammar.github.io/illustrated-transformer*</p>
 
 In multi-head attention, the attention mechanism is applied multiple times in parallel, with each attention "head" using its own set of learned parameters. Each head independently computes attention using its own query, key, and value matrices:
 
@@ -92,7 +95,9 @@ $$
 h_t = \left( \text{head}_t^1 \oplus \cdots \oplus \text{head}_t^m \right) \cdot W^O
 $$
 
-### 1.3. Position embeddings
+## 2. Position embeddings
+
+TBD
 
 Self-attention does not have any notion of word ordering
 
@@ -102,9 +107,13 @@ Self-attention does not have any notion of word ordering
 
 Multi-head self-attention isn’t quite sufficient. We need a few extra things and package everything up into so-called Transformer blocks
 
-## 2. Types of Transformer models
+## 3. Transformer blocks
 
-### 2.1. Sequence Encoders with self-attention
+TBD
+
+## 4. Types of Transformer models
+
+### 4.1. Sequence Encoders with self-attention
 
 Encoder self-attention covers the entire sequence, i.e. both the words to the left of the current position and the words to the right of the current position.
 
@@ -122,7 +131,7 @@ Encoder self-attention covers the entire sequence, i.e. both the words to the le
 
 ![encoder_sequence_labeling](/static/images/resource/from-transformer-to-llm/encoder_sequence_labeling_viz_4.png)
 
-### 2.2. Sequence Decoders with self-attention
+### 4.2. Sequence Decoders with self-attention
 
 - Attention can only access tokens to the left.
 - But typically, far-way tokens get less attention.
@@ -130,7 +139,7 @@ Encoder self-attention covers the entire sequence, i.e. both the words to the le
 
 ![decoder](/static/images/resource/from-transformer-to-llm/decoder_viz_5.png)
 
-### 2.3. Encoder-Decoder model with cross-attention
+### 4.3. Encoder-Decoder model with cross-attention
 
 Main idea in Machine Translation
 
@@ -151,5 +160,4 @@ Main idea in Machine Translation
 # Reference
 
 - [Lecture 7 - NN2](https://www.uio.no/studier/emner/matnat/ifi/IN4080/h24/slides/07-nn2.pdf), IN4080, Autumn 2024, University of Oslo
-- Speech and Language Processing. Daniel Jurafsky & James H. Martin. Copyright © 2024. Draft of August 20, 2024. CHAPTER
-9, The Transformer
+- Speech and Language Processing. Daniel Jurafsky & James H. Martin. Copyright © 2024. Draft of August 20, 2024. CHAPTER 9, The Transformer
