feat: add new article and add tag for the previous one

--- a/data/blog/vector-database.mdx
+++ b/data/blog/vector-database.mdx
@@ -1,7 +1,7 @@
 ---
 title: Vector Database - Pinecone
 date: '2024-04-01'
-tags: ['Database']
+tags: ['Database', 'Vector Databases', 'Pinecone']
 draft: false
 summary: 'In this article, we delve into Vector Databases by using Pinecone and explore the fundamentals of vector embeddings, indexes, and essential components of these databases. Furthermore, it will provide a guide on setting up a Vector Database on Pinecone, walking through the installation process, obtaining API keys, and initializing client connections.'
 image: '/static/images/resource/vector-database/fig1.png'
