--- a/data/blog/llms-part-1.mdx
+++ b/data/blog/llms-part-1.mdx
@@ -5,6 +5,7 @@ tags: ['LLMs','Language Models','LangChain']
 draft: false
 summary: 'This article provides an overview of Large Language Models (LLMs), LLMs evolution and the core concepts of LangChain - an open source framework for building applications based on LLMs.'
 image: '/static/images/resource/llms/part-1.png'
+series: 'LLMs'
 ---
 
 <TOCInline toc={props.toc} asDisclosure toHeading={3} />
