--- a/data/blog/llms-part-2.mdx
+++ b/data/blog/llms-part-2.mdx
@@ -5,6 +5,7 @@ tags: ['LLMs','Language Models','LangChain']
 draft: false
 summary: 'This article provides an overview of the core concepts of Large Language Models (LLMs) in LangChain, including LLM components, prompt templates, indexing, memory, chains, and agents.'
 image: '/static/images/resource/llms/chat_models.png'
+series: 'LLMs'
 ---
 
 <TOCInline toc={props.toc} asDisclosure toHeading={3} />
